final string now static; Boolean() and String() usage; unused fields; javadoc tags
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323610 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 6eaf1923b4543cd273c88d19b5880cfc052e142b